# salty-serverless

./: Cargo.toml  serverless.yml
src/: main.rs
