[package]
name = "salty-serverless"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "hello-handler"
#path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.4.0"
aws-sdk-dynamodb = "0.13.0"
aws-config = "0.13.0"
http = "0.2.4"
lambda_runtime = "0.3.0"
log = "0.4.14"
serde = "1.0.126"
serde_json = "1.0.81"
simple_logger = "1.11.0"
tokio = "1.6.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]